--- a/reports/SecondaryDataAnalysisDraft.Rmd
+++ b/reports/SecondaryDataAnalysisDraft.Rmd
@@ -17,12 +17,11 @@ require(classInt)
 load(file = "../sources/data/clean/pop.map.RData")
 source("../analysis/scripts/02-Functions.R")
 ```
-_This is a draft outline of the secondary data analysis chapter for the Myanmar ageing farmers report. Tentative headings are based on SH email 11.8.16._
-
+_This is a draft outline of the secondary data analysis chapter for the Myanmar ageing farmers report. 
 
 _This is tentative, with placeholders for possible charts/maps, and indication of available variables and datasets._
 
-# Demographic - social, economic
+# Demographic - social, economic; Households - structure, income, vulnerability
 
 ## 2014 Census 
 
@@ -45,7 +44,7 @@ plot(ShpMMRTownship)
 plot(ShpMMRTownship[ShpMMRTownship@data$ST %in% c("Yangon") ,], col="orange", add=TRUE)
 plot(ShpMMRTownship[ShpMMRTownship@data$ST %in% c("Naypyitaw  Council") ,], col="red", add=TRUE)
 par(mar = c(5.1, 4.1, 4.1, 2.1))
-plot(unlist(ShpMMRTownship@data[10+15]), unlist(ShpMMRTownship@data[31+15]),
+plot(unlist(ShpMMRTownship@data[10+15]), unlist(ShpMMRTownship@data[31+15]), col = "gray", pch = 19,
      xlab = "Sex ratio", ylab = "Old age dependency ratio")
 points(unlist(ShpMMRTownship@data[ShpMMRTownship@data$ST %in% c("Yangon") ,10+15]), 
        unlist(ShpMMRTownship@data[ShpMMRTownship@data$ST %in% c("Yangon") ,31+15]),
@@ -59,7 +58,7 @@ legend("topright", col = c("red", "orange"), legend = c("Yangon", "Natpyitaw"),
 
 <br> 
 
-```{r fig_testmap, include = TRUE, echo = FALSE, results="hide", warning = FALSE, fig.width=8, figh.height=8,fig.keep='high', fig.cap="Figure 2: Test Map of Myanmar - left: township level, right: region/state level"}
+```{r fig_pop_map, include = TRUE, echo = FALSE, results="hide", warning = FALSE, fig.width=8, figh.height=8,fig.keep='high', fig.cap="Figure 2: Cloropleth maps of Myanmar at township level (330) - left Sex ratio of rural population, right old age dependency ratio (over 65) "}
 par(mar = c(0,0,0,0))
 par(mfrow = c(1,2))
 # rural sex ratio
@@ -77,21 +76,122 @@ col <- FunMNTownMap(ShpMMRTownship@data$Selected.age.groups.and.dependency.ratio
 legend("topright", fill=attr(col, "palette"), 
        legend = names(attr(col, "table")), bty="n",
        title = "Old age dependency ratio")
+```
+
+
+Of course all of these also be zoomed in to just the region of interest, and e.g. Figure 3 shows the cloropleth maps for literacy rates for all the townships in both the states of interest. 
+
+```{r fig_zoom_in, include = TRUE, echo = FALSE, results="hide", warning = FALSE, fig.width=8, figh.height=8,fig.keep='high', fig.cap="Figure 3: Zoom into Yangon townships on left (44) and Nay Pyi Taw townships on the right (8) on single variable - Literacy rate for both sexes"}
+par(mfrow = c(1,2))
+col <- FunMNTownMapY(unlist(ShpMMRTownship@data[55+15]),
+             n = 5,
+             seq(90,100,2), pal = brewer.pal(9, "Reds"),
+             mar = c(1,1,1,2))
+legend("topright", fill=attr(col, "palette"), 
+       legend = names(attr(col, "table")), bty="n",
+       title = "Literacy rate")
+
+FunMNTownMapN(unlist(ShpMMRTownship@data[55+15]), 
+              n = 5,
+              seq(90,100,2), pal = brewer.pal(9, "Reds"),
+             mar = c(1,2,1,1))
 
 
 ```
 
+All of these can of course be aggregated up to district and/or state and region levels and mapped or plotted accordingly. 
 
-Of course all of these also be zoomed in to just the region of interest, and e.g. 
+### Household Based Dataset - Township level data
+
+All of this applies to the household level data as well. A list of the variables available is at the end of this document for reference. 
+
+Of course a combination is also possible, as for example in Figure 4, which looks at the proportion of female headed households across the 330 townships, and also adds a zoomed map of both the Yangon region and Naypyitaw, and a histograms that let us compare the distribution within each of the regions with the distribution nationally.
+
+```{r fig_testmap, include = TRUE, echo = FALSE, results="hide", warning = FALSE, fig.width=8, figh.height=8,fig.keep='high', fig.cap="Figure 4: Proportion of households headed by women in 330 townships (left), in Nat Pyi Taw middle top and Yangon middle bottom, along with histograpms showing the relative distirbutions of each region compared to the national one. "}
+m <- cbind(c(1,1), c(2,3), c(4,5))
+layout(m)
+
+col <- FunMNTownMap(unlist(ShpMMRTownship@data[306]),
+             n = 6,
+             seq(0,60,10), pal =  brewer.pal(9, "YlGn") )
+legend("bottomleft", fill=attr(col, "palette"), 
+    legend = names(attr(col, "table")), bty="n",
+     title = "% Female-headed HH")
+rect(95.51 ,19.38,96.86, 20.36, border = "red")
+rect(95.21 ,16.24, 97.24, 17.85, border = "red")
+
+FunMNTownMapN(unlist(ShpMMRTownship@data[306]),
+             n = 6,
+             seq(0,60,10), pal =  brewer.pal(9, "YlGn"),
+             mar = c(3,3,3,3))
+npt <- par("usr")
+FunMNTownMapY(unlist(ShpMMRTownship@data[306]),
+             n = 6,
+             seq(0,60,10), pal =  brewer.pal(9, "YlGn"),
+             mar = c(1,1,1,1))
+yng <- par("usr")
+par(mar = c(3,1,3,1))
+FunMNTownHistN(306, main = "Nay Pyi Taw Female HH")
+
+FunMNTownHistY(306, main = "Yangon Female HH")
+
+```
 
 
-### Household Based Dataset
+### Occupation-Industry
+
+Still using 2014 census data (BaselineData_Census_Occupation_Industry_MIMU_Jan2016) [@MIMU2014] the occupation/industry tables are summarised bellow. Populaiton pyramids, etc. Geography only goes to regional level though, so mapping is limited. 
+
+Economic Activity (status):
+
+* 15 Regions 
+    + age groups - over 10  (14)
+        - male/female
+
+
+Economic Activity (status):       
+
+* urban/rural (15)
+    + age groups - over 10  (14)
+    
+
+Occupation (9 categories, incl. "skilled agricultural, forestry and fishery workers"):
+
+* urban/rural (15)
+    + age groups - over 10  (13)
+    
+
+Occupation (9 categories, incl. "skilled agricultural, forestry and fishery workers"):
+
+* 15 Regions 
+      + male/female
+
+    
+    
+Industry (16 categories, incl. " Agriculture, forestry and fishing"):
+
+* urban/rural (15)
+    + age groups - over 10  (13)
+    
+
+Industry (16 categories, incl. " Agriculture, forestry and fishing"):
+
+* 15 Regions 
+      + male/female
+
+    
+    
+    
+
+
+
+
 
 
 # Agricultural - food security, crops, land 
-#  Households - structure, income, vulnerability
 
-# Variables:
+
+# Appendix 1: Variables
 
 Census population level variable list: 
 
@@ -100,6 +200,15 @@ load("../sources/data/clean/census.pop.varz.RData")
 varz
 ```
 <br>
+
+Census household level variable list: 
+
+```{r}
+load("../sources/data/clean/census.hh.varz.RData")
+varz
+```
+<br>
+
 
 ##### References
 
