--- a/sources/myanmar-mz.bib
+++ b/sources/myanmar-mz.bib
@@ -56,12 +56,27 @@ pages = {1--126},
 title = {{The Situation of Older Persons in Myanmar}},
 year = {2013}
 }
+@misc{MIMU2014,
+abstract = {Myanmar Information Management Unit 2014-2016},
+author = {MIMU},
+title = {{The 2014 Myanmar Population and Housing Census}},
+url = {http://www.themimu.info/census-data},
+year = {2014}
+}
 @misc{Sein2010,
 abstract = {mz: Power point presentation},
 author = {Sein, U Aye Maung},
 file = {:C$\backslash$:/Users/sfos0247/Dropbox/analysis/Myanmar/sources/literature/2010 - Sein- Summary ppt on AgriCensusMyanmar-2003-WCA2010-RT-BKK-TS11.3.ppt:ppt},
 title = {{Rural Statistics from Agricultural Census (Based on Myanmar Census of Agriculture 2003)}},
 url = {http://documentslide.com/documents/1-rural-statistics-from-agricultural-census-based-on-myanmar-census-of-agriculture.html},
+year = {2010}
+}
+@techreport{IHLC2010,
+abstract = {Several household surveys on various aspects of living conditions have been conducted in Myanmar in recent years. While each of these surveys offered valuable information on a specific area, none have enabled holistic perspective on the situation of households and individuals. In order to provide the country's first reliable integrated assessment of all major domains of living conditions, the United Nations Development Programme and Government of Myanmar have agreed on implementation of an Integrated Household Living Conditions Assessment (IHLCA) in 2003‐05. One of the main components is a two‐round quantitative household survey to be conducted in two different seasons, approximately six months apart, for compiling economic and social indicators representative at the national and state/division levels and for different population sub‐groups. At the onset of IHLCA project, IDEA International had identified data gaps and recommended survey design after reviewing the data collected and published via different existing sources. Based on these recommendations, appropriate survey design that enabled to fill up some of the data gaps was systematically developed in this IHLCA survey. The first IHLCA survey was able to provide a national poverty line for the first time in Myanmar and its related indicators as well as a number of MDG indicators. However, there remain additional indicators to be filled. As a continuation of the first IHLCA survey, the second survey was agreed to be launched in 2009‐2010 along the line of the first IHLCA survey with the objective of tracking changes in living conditions and poverty during the four years since 2005. Thus, it is imperative to identify indicators that need to be kept tracking on and those that required to be measured additionally. This report is thus conducted to give recommendations for the second IHLCA survey based on a systematic review of the data collected and published via the different existing sources, data gaps existed and filled by the first IHLCA survey. A large range of indicators that can readily be compiled through household‐based data exist for monitoring national and international goals for improving living conditions and reducing poverty. However, in Myanmar, wide discrepancies have often been observed for the same indicator over successive surveys, likely related to varying collection and analysis strategies. Even wider divergence has been observed across types of data sources, notably surveys versus routine administrative data.},
+author = {Unit, IHLCA project Technical},
+file = {:C$\backslash$:/Users/sfos0247/Dropbox/analysis/MyanmarSecondaryData/sources/literature/2010 - IHLCA Analysis of data sources and gaps for monitoring living conditions in Myanmar.pdf:pdf},
+pages = {0--106},
+title = {{Analysis of Data Sources and Gaps for monitoring living conditions in the Union of Myanmar}},
 year = {2010}
 }
 @techreport{IHCL2011,
@@ -87,14 +102,6 @@ pages = {1--80},
 title = {{Integrated Household Living Conditions Survey in Myanmar 2009-2010 - MDG Data Report}},
 year = {2011}
 }
-@techreport{IHLC2010,
-abstract = {Several household surveys on various aspects of living conditions have been conducted in Myanmar in recent years. While each of these surveys offered valuable information on a specific area, none have enabled holistic perspective on the situation of households and individuals. In order to provide the country's first reliable integrated assessment of all major domains of living conditions, the United Nations Development Programme and Government of Myanmar have agreed on implementation of an Integrated Household Living Conditions Assessment (IHLCA) in 2003‐05. One of the main components is a two‐round quantitative household survey to be conducted in two different seasons, approximately six months apart, for compiling economic and social indicators representative at the national and state/division levels and for different population sub‐groups. At the onset of IHLCA project, IDEA International had identified data gaps and recommended survey design after reviewing the data collected and published via different existing sources. Based on these recommendations, appropriate survey design that enabled to fill up some of the data gaps was systematically developed in this IHLCA survey. The first IHLCA survey was able to provide a national poverty line for the first time in Myanmar and its related indicators as well as a number of MDG indicators. However, there remain additional indicators to be filled. As a continuation of the first IHLCA survey, the second survey was agreed to be launched in 2009‐2010 along the line of the first IHLCA survey with the objective of tracking changes in living conditions and poverty during the four years since 2005. Thus, it is imperative to identify indicators that need to be kept tracking on and those that required to be measured additionally. This report is thus conducted to give recommendations for the second IHLCA survey based on a systematic review of the data collected and published via the different existing sources, data gaps existed and filled by the first IHLCA survey. A large range of indicators that can readily be compiled through household‐based data exist for monitoring national and international goals for improving living conditions and reducing poverty. However, in Myanmar, wide discrepancies have often been observed for the same indicator over successive surveys, likely related to varying collection and analysis strategies. Even wider divergence has been observed across types of data sources, notably surveys versus routine administrative data.},
-author = {Unit, IHLCA project Technical},
-file = {:C$\backslash$:/Users/sfos0247/Dropbox/analysis/MyanmarSecondaryData/sources/literature/2010 - IHLCA Analysis of data sources and gaps for monitoring living conditions in Myanmar.pdf:pdf},
-pages = {0--106},
-title = {{Analysis of Data Sources and Gaps for monitoring living conditions in the Union of Myanmar}},
-year = {2010}
-}
 @techreport{Number2003,
 booktitle = {Main},
 file = {:C$\backslash$:/Users/sfos0247/Dropbox/analysis/Myanmar/sources/literature/2003 - FAO - Myanmar Agri Census Main Results Myanmar.pdf:pdf},
@@ -103,10 +110,15 @@ title = {{MYANMAR - Agricultural Census 2003 - Main Results}},
 url = {http://www.fao.org/fileadmin/templates/ess/documents/world{\_}census{\_}of{\_}agriculture/main{\_}results{\_}by{\_}country/Myanmar{\_}2003F.pdf},
 year = {2003}
 }
-@misc{MIMU2014,
-abstract = {Myanmar Information Management Unit 2014-2016},
-author = {MIMU},
-title = {{The 2014 Myanmar Population and Housing Census}},
-url = {http://www.themimu.info/census-data},
-year = {2014}
+@misc{IRRI2016,
+abstract = {Onlinw Query Facility},
+author = {IRRI},
+title = {{World Rice Statistics}},
+url = {http://ricestat.irri.org:8080/wrsv3/entrypoint.htm},
+year = {2016}
+}
+@misc{UNPD2015,
+author = {UNPD},
+title = {{World Population Prospects}},
+year = {2015}
 }
